# ahex

./: Cargo.toml
assets/: ball.blend  ball.blend1  ball.glb  banana.blend  banana.blend1  banana.glb  goal.blend  goal.glb  ice.blend  ice.blend1  ice.glb  player.blend  player.blend1  player.glb  tile.blend  tile.blend1  tile.glb  tile2.blend1  tile_below.blend  tile_below.blend1  tile_below.glb  tile_single.blend1
docs/: notes.typ
levels/: 1.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
src/: level.rs  main.rs  settings.toml
src/components/: camera.rs  goal.rs  level.rs  lighting.rs  mod.rs  movement.rs  player.rs  tile.rs  tile_coordinates.rs
src/resources/: effects.rs  levels.rs  mod.rs  settings.rs
src/systems/: camera.rs  goal.rs  level.rs  lighting.rs  mod.rs  player.rs  setup.rs  tiles.rs
