[package]
name = "ahex"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["experimental_pbr_pcss", "jpeg"] }
bevy_common_assets = { version = "0.14.0", features = ["toml"] }
bevy_gltf = "0.17.3"
bevy_hanabi = "0.17.0"
bevy_polyline = "0.13.0"
bevy_water = "0.17.0"
include_dir = "0.7.4"
serde = "1.0.228"
serde_toml = "0.0.1"
toml = "0.9.10"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
